--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "aoc-2024"
 version = "0.1.0"
 description = ""
-authors = ["Zoltan Puha <zoltan.puha@zalando.de>"]
+authors = ["Zoltan Puha <puha.zoli@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
